fix - menu header broken in 990px < screen size < 1100

--- a/src/assets/scss/variables/_breakpoints.scss
+++ b/src/assets/scss/variables/_breakpoints.scss
@@ -9,9 +9,16 @@ $break-tablet-portrait-up:600px;
 $break-tablet-landscape-bottom:989px;
 $break-tablet-landscape-up:990px;
 
-$break-desktop-up-1200:1100px;
+
+
+$break-desktop-up-1160:1160px;
+$break-desktop-bottom-1160:1159px;
+
 $break-desktop-up-1455:1455px;
 $break-desktop-bottom-1455:1454px;
+
+
+
 $break-big-desktop-up-1800:1800px;
 
 $sidebar-size:280px;
@@ -44,9 +51,14 @@ $sidebar-size-neg:-280px;
 }
 
 
-@mixin for-desktop-up-1100 {
-  @media (min-width: $break-desktop-up-1100) { @content; }
+@mixin for-desktop-up-1160 {
+  @media (min-width: $break-desktop-up-1160) { @content; }
 }
+
+@mixin for-desktop-bottom-1160 {
+  @media (max-width: $break-desktop-bottom-1160) { @content; }
+}
+
 
 @mixin for-desktop-up-1455 {
   @media (min-width: $break-desktop-up-1455) { @content; }
